--- a/final/view/login.html
+++ b/final/view/login.html
@@ -7,7 +7,7 @@
 
 <body>
 <form action="login" method="post" class="form-signin">
-    <p style="color:blue">登入介面</p>
+    <h2 style="color:blue">登入介面</h2>
     <p>
       <label>帳號</label><br/>
       <input name="id" type="text" value="" class="form-control">
@@ -17,5 +17,6 @@
       <input name="password" type="password" value="" class="form-control">
     </p>
     <button type="submit">登入</button>
+    <a href="register" >註冊</a>
   </form> 
 </body>
