--- a/final/view/register.html
+++ b/final/view/register.html
@@ -7,17 +7,13 @@
 
 <body>
 <form action="register" method="post" class="form-signup">
-    <p style="color:blue">註冊介面</p>
+    <h2 style="color:blue">註冊介面</h2>
     <p>
       <label>帳號</label><br/>
       <input name="id" type="text" value="" class="form-control">
     </p>
     <p>
       <label>密碼</label><br/>
-      <input name="password" type="password" value="" class="form-control">
-    </p>
-    <p>
-      <label>確認密碼</label><br/>
       <input name="password" type="password" value="" class="form-control">
     </p>
 
