--- a/final/view/index.html
+++ b/final/view/index.html
@@ -4,22 +4,44 @@
     <meta charset="UTF-8">
     <title>Shopping web</title>
     <link rel="stylesheet" href="style.css">
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
+
 </head>
 <body>
     
     <div class="nav">
-            <a href="/">首頁</a>
-            <a href="/cart">購物車</a>
-            <a href="/register">註冊</a>
+        <a href="/">首頁</a>
+        <a href="/cart">購物車</a>
+        <a href="/register">註冊</a>
 
-            <% if (userid == undefined){ %>
-            <a href="/login">登入</a>   
-            <% } else { %>
-            <a href="/logout">登出</a>
-            <% } %>
-
+        <% if (userid == undefined){ %>
+        <a href="/login">登入</a>   
+        <% } else { %>
+        <a href="/logout">登出</a>
+        <% } %>
     </div>
     
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
+                <label>$100</label>
+                <button>加入</button>
+            </div>
+            <div class="col-sm">
+                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
+                <label>$200</label>
+                <button>加入</button>
+            </div>
+            <div class="col-sm">
+                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
+                <label>$300</label>
+                <button>加入</button>
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
