--- a/final/view/index.html
+++ b/final/view/index.html
@@ -25,20 +25,35 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-sm">
-                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
-                <label>$100</label>
-                <button>加入</button>
+            <div class="col-sm">              
+                <div class="card" style="width: 18rem;">
+                    <img src="https://media.playstation.com/is/image/SCEA/black-friday-week-ps4-ps4pro-tw1119?$native_nt$" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Ps4</h5>
+                    <p class="card-text">$100</p>
+                    <a href="#" class="btn btn-primary">加入</a>
+                    </div>
+                </div>
             </div>
             <div class="col-sm">
-                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
-                <label>$200</label>
-                <button>加入</button>
+                <div class="card" style="width: 18rem;">
+                    <img src="https://compass-ssl.xbox.com/assets/05/b0/05b01a46-58eb-4927-ad21-3c43b545ebaf.jpg?n=X1S-2019_Panes-2-Up-1084_111_570x400.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Xbox</h5>
+                    <p class="card-text">$200</p>
+                    <a href="#" class="btn btn-primary">加入</a>
+                    </div>
+                </div>
             </div>
             <div class="col-sm">
-                <img width="200" height="200" src="https://cdnblob.moshi.com/uploadedfiles/photo/v3/productImages/1063/01.jpg"><br>
-                <label>$300</label>
-                <button>加入</button>
+                <div class="card" style="width: 18rem;">
+                    <img src="https://www.nintendo.tw/hardware/switch/feature/img/01-hero/local-hero__model-pic.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                    <h5 class="card-title">Switch</h5>
+                    <p class="card-text">$300</p>
+                    <a href="#" class="btn btn-primary">加入</a>
+                    </div>
+                </div>           
             </div>
         </div>
     </div>
