--- a/final/view/login.html
+++ b/final/view/login.html
@@ -7,7 +7,13 @@
 
 <body>
 <form action="login" method="post" class="form-signin">
+
     <h2 style="color:blue">登入介面</h2>
+
+    <% if (message != undefined){ %> 
+    <div class="alert alert-danger"><%= message %></div>
+    <%}%>
+
     <p>
       <label>帳號</label><br/>
       <input name="id" type="text" value="" class="form-control">
@@ -18,5 +24,6 @@
     </p>
     <button type="submit">登入</button>
     <a href="register" >註冊</a>
+    <a href="/">首頁</a>
   </form> 
 </body>
