--- a/final/view/register.html
+++ b/final/view/register.html
@@ -7,7 +7,13 @@
 
 <body>
 <form action="register" method="post" class="form-signup">
+
     <h2 style="color:blue">註冊介面</h2>
+
+    <% if (message != undefined){ %> 
+      <div class="alert alert-danger"><%= message %></div>
+    <%}%>
+    
     <p>
       <label>帳號</label><br/>
       <input name="id" type="text" value="" class="form-control">
@@ -18,6 +24,7 @@
     </p>
 
     <button>送出</button>
+    <a href="/">首頁</a>
   </form>
 
 </body>
