--- a/final/view/index.html
+++ b/final/view/index.html
@@ -32,7 +32,7 @@
                     <img src="https://media.playstation.com/is/image/SCEA/black-friday-week-ps4-ps4pro-tw1119?$native_nt$" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title" id="Name-0">Ps4</h5>
-                    <p class="card-text" id="Price-0">$100</p>
+                    <p class="card-text" id="Price-0">100</p>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="數量" id="Quantity-0">
                     </div>
@@ -45,7 +45,7 @@
                     <img src="https://compass-ssl.xbox.com/assets/05/b0/05b01a46-58eb-4927-ad21-3c43b545ebaf.jpg?n=X1S-2019_Panes-2-Up-1084_111_570x400.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title" id="Name-1">Xbox</h5>
-                    <p class="card-text" id="Price-1">$200</p>
+                    <p class="card-text" id="Price-1">200</p>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="數量" id="Quantity-1">
                     </div>
@@ -58,7 +58,7 @@
                     <img src="https://www.nintendo.tw/hardware/switch/feature/img/01-hero/local-hero__model-pic.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title" id="Name-2">Switch</h5>
-                    <p class="card-text" id="Price-2">$300</p>
+                    <p class="card-text" id="Price-2">300</p>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="數量" id="Quantity-2">
                     </div>
@@ -76,11 +76,16 @@
         var productPrice = document.getElementById("Price-" + productId).textContent
         var productQuantity = document.getElementById("Quantity-" + productId).value
 
-        let products = []
-        products.push({'Id': productsId, 'Name': productName, 'Price': productPrice, 'Quantity': productQuantity })
+        let products = {
+            Id : productsId,
+            Name : productName,
+            Price : productPrice,
+            Quantity : productQuantity
+        }
+        // products.push({'Id': productsId, 'Name': productName, 'Price': productPrice, 'Quantity': productQuantity })
         localStorage.setItem('products-' + productsId, JSON.stringify(products))
         productsId ++
-        console.log('add success', JSON.stringify(products))  
+        console.log('add success', products)  
     }
 </script>
 </body>
