--- a/final/view/register.html
+++ b/final/view/register.html
@@ -10,6 +10,7 @@
 
     <h2 style="color:blue">註冊介面</h2>
 
+    <!-- 是否有錯誤訊息 -->
     <% if (message != undefined){ %> 
       <div class="alert alert-danger"><%= message %></div>
     <%}%>
@@ -24,7 +25,7 @@
     </p>
 
     <button>送出</button>
-    <a href="/">首頁</a>
+    <a href="/" >首頁</a>
   </form>
 
 </body>
