--- a/final/view/cart.html
+++ b/final/view/cart.html
@@ -1,12 +1,20 @@
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
 <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<!------ Include the above in your HEAD tag ---------->
-<body  onload="showCart()">
+
+<!-- 判斷登入狀態 -->
+<% if (userid == undefined){ %>
+<body onload="alert_login()"> 
+<% } else { %>
+<body onload="showCart()"
+<% } %>
+	
 <div class="container">
 	<div class="row">
 		<div class="col-xs-8">
 			<div class="panel panel-info">
+
+				<!-- 上方欄位 -->
 				<div class="panel-heading">
 					<div class="panel-title">
 						<div class="row">
@@ -14,48 +22,19 @@
 								<h5><span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart</h5>
 							</div>
 							<div class="col-xs-6">
-								<button type="button" class="btn btn-primary btn-sm btn-block">
+								<button type="button" class="btn btn-primary btn-sm btn-block" onclick="location.href = '/'">
 									<span class="glyphicon glyphicon-share-alt"></span> Continue shopping
 								</button>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="panel-body" id="body">
-					<!-- <div class="row" >
-						<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
-						</div>
-						<div class="col-xs-4">
-							<h4 class="product-name"><strong id="Name">Product name</strong></h4><h4><small>Product description</small></h4>
-						</div>
-						<div class="col-xs-6">
-							<div class="col-xs-6 text-right">
-								<h6><strong id="Price">25.00 <span class="text-muted">x</span></strong></h6>
-							</div>
-							<div class="col-xs-4">
-								<input type="text" id="Quantity" class="form-control input-sm" value="1">
-							</div>
-							<div class="col-xs-2">
-								<button type="button" class="btn btn-link btn-xs" onclick="removeItem()">
-									<span class="glyphicon glyphicon-trash"> </span>
-								</button>
-							</div>
-						</div>
-					</div>
-					<hr> -->
-					<div class="row">
-						<div class="text-center">
-							<div class="col-xs-9">
-								<h6 class="text-right">Added items?</h6>
-							</div>
-							<div class="col-xs-3">
-								<button type="button" class="btn btn-default btn-sm btn-block">
-									Update cart
-								</button>
-							</div>
-						</div>
-					</div>
+
+				<!-- 購物車內容部分 -->
+				<div class="panel-body" id="body">		
 				</div>
+
+				<!--底下欄位 -->
 				<div class="panel-footer">
 					<div class="row text-center">
 						<div class="col-xs-9">
@@ -77,7 +56,7 @@
 <script>
 
 	let productsId = 0
-	let productTotal = 0
+	let productTotal = 0 // 商品總額
 
 	function showCart(){
 		loadProduct()
@@ -87,16 +66,15 @@
 
 		let content = ""
 		
-		for(productsId; localStorage.getItem("products-" + productsId); productsId++ ){
-			let cart = JSON.parse(localStorage.getItem("products-"+ productsId))
+		for (productsId; localStorage.getItem("products-" + productsId); productsId++ ){ // 迴圈不斷重複直到超過 local.storage 的 productsId
+			let cart = JSON.parse(localStorage.getItem("products-"+ productsId)) // localStorage 購物車內容轉換成物件型態
+			console.log('load test',cart)
 			productName = cart.Name
 			productPrice = cart.Price
 			productQuantity = cart.Quantity
 
 			let html = `
-			<div class="row" >
-				<div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
-				</div>
+			<div class="row" id="${productsId}">
 				<div class="col-xs-4">
 					<h4 class="product-name"><strong >${productName}</strong></h4><h4><small>Product description</small></h4>
 				</div>
@@ -108,7 +86,7 @@
 						<input type="text" class="form-control input-sm" value="${productQuantity}">
 					</div>
 					<div class="col-xs-2">
-						<button type="button" class="btn btn-link btn-xs" onclick="removeItem()">
+						<button type="button" class="btn btn-link btn-xs" onclick="removeItem(${productsId})">
 							<span class="glyphicon glyphicon-trash"> </span>
 						</button>
 					</div>
@@ -117,21 +95,34 @@
 			<hr>		
 			`
 
-			content += html
-			var Total = productPrice * productQuantity
-			productTotal += Total
+			content += html // 購物車加上一列內容
+			var Total = productPrice * productQuantity // 總額 = 價格 * 數量
+			productTotal += Total // 每一列金額重複疊加
 		}
 		document.getElementById('body').innerHTML = content
 		document.getElementById('total').innerHTML = productTotal
 		
 	}
 
-	function removeItem(){
-		localStorage.removeItem('products-'+ productsId)
-
+	// 移除商品
+	function removeItem(Id){
+		document.getElementById(Id).innerHTML='' // 刪除內容的動態效果
+		console.log(Id)
+		localStorage.removeItem('products-'+ Id)
+		localStorage.setItem('productsId',productsId - 1)
+		console.log("remove test")
+		productsId --
 	}
 	
+	// 清除購物車
 	function clearCart(){
 		localStorage.clear()
+		location.href = '/'
+	}
+
+	// 登入提醒視窗
+	function alert_login(){
+		alert('請先登入')
+		location.href = '/'
 	}
 </script>
