--- a/final/view/login.html
+++ b/final/view/login.html
@@ -10,6 +10,7 @@
 
     <h2 style="color:blue">登入介面</h2>
 
+    <!-- 是否有錯誤訊息 -->
     <% if (message != undefined){ %> 
     <div class="alert alert-danger"><%= message %></div>
     <%}%>
@@ -24,6 +25,6 @@
     </p>
     <button type="submit">登入</button>
     <a href="register" >註冊</a>
-    <a href="/">首頁</a>
+    <a href="/" style="text-align: right;">首頁</a>
   </form> 
 </body>
