--- a/final/view/cart.html
+++ b/final/view/cart.html
@@ -23,7 +23,7 @@
 							</div>
 							<div class="col-xs-6">
 								<button type="button" class="btn btn-primary btn-sm btn-block" onclick="location.href = '/'">
-									<span class="glyphicon glyphicon-share-alt"></span> Continue shopping
+									<span class="glyphicon glyphicon-share-alt"></span> 繼續瀏覽商品
 								</button>
 							</div>
 						</div>
@@ -38,7 +38,7 @@
 				<div class="panel-footer">
 					<div class="row text-center">
 						<div class="col-xs-9">
-							<h4 class="text-right">Total :  <strong id='total'>$50.00</strong></h4>
+							<h4 class="text-right">Total :  <strong id='total'>$00.00</strong></h4>
 						</div>
 						<div class="col-xs-3">
 							<button type="button" class="btn btn-success btn-block" onclick="clearCart()">
