--- a/final/view/cart.html
+++ b/final/view/cart.html
@@ -9,7 +9,7 @@
 <body onload="showCart()"
 <% } %>
 	
-<div class="container">
+<div class="container" style="padding: 80px;">
 	<div class="row">
 		<div class="col-xs-8">
 			<div class="panel panel-info">
