--- a/final/view/cart.html
+++ b/final/view/cart.html
@@ -11,8 +11,8 @@
 	
 <div class="container" style="padding: 80px;">
 	<div class="row">
-		<div class="col-xs-8">
-			<div class="panel panel-info">
+		<div class="col-xs-8" style="margin-left: 150px;" >
+			<div class="panel panel-info" >
 
 				<!-- 上方欄位 -->
 				<div class="panel-heading">
