--- a/final/view/cart.html
+++ b/final/view/cart.html
@@ -6,7 +6,7 @@
 <% if (userid == undefined){ %>
 <body onload="alert_login()"> 
 <% } else { %>
-<body onload="showCart()"
+<body onload="loadCart()"
 <% } %>
 	
 <div class="container" style="padding: 80px;">
@@ -51,73 +51,89 @@
 		</div>
 	</div>
 </div>
-</body>
-
 <script>
-
-	let productsId = 0
-	let productTotal = 0 // 商品總額
-
-	function showCart(){
-		loadProduct()
-	}
+	// 偵測產品數量修改事件，總金額跟著變化
+	function amountChange(){
+		const am = document.querySelectorAll("input[type = 'number']")
+		for(i=0; i<am.length;i++){
+			am[i].addEventListener('change',function(event){
+				Count()
+				console.log("amount",event.target.value)
+			})
+		}
+	}	
 	
-	function loadProduct(){
-
+	// 由 localStorage 載入購物車資料並顯示
+	function loadCart(){
 		let content = ""
-		
-		for (productsId; localStorage.getItem("products-" + productsId); productsId++ ){ // 迴圈不斷重複直到超過 local.storage 的 productsId
+
+		for (var productsId = 0; productsId < localStorage.length ; productsId++ ){ // 執行迴圈直到資料讀取完畢
 			let cart = JSON.parse(localStorage.getItem("products-"+ productsId)) // localStorage 購物車內容轉換成物件型態
-			console.log('load test',cart)
 			productName = cart.Name
 			productPrice = cart.Price
-			productQuantity = cart.Quantity
-
-			let html = `
-			<div class="row" id="${productsId}">
-				<div class="col-xs-4">
-					<h4 class="product-name"><strong >${productName}</strong></h4><h4><small>Product description</small></h4>
-				</div>
-				<div class="col-xs-6">
-					<div class="col-xs-6 text-right">
-						<h6><strong >${productPrice} <span class="text-muted">x</span></strong></h6>
-					</div>
-					<div class="col-xs-4">
-						<input type="text" class="form-control input-sm" value="${productQuantity}">
-					</div>
-					<div class="col-xs-2">
-						<button type="button" class="btn btn-link btn-xs" onclick="removeItem(${productsId})">
-							<span class="glyphicon glyphicon-trash"> </span>
-						</button>
-					</div>
-				</div>
-			</div>
-			<hr>		
+			productQuantity = cart.Quantity 
+			let html = 
 			`
-
-			content += html // 購物車加上一列內容
-			var Total = productPrice * productQuantity // 總額 = 價格 * 數量
-			productTotal += Total // 每一列金額重複疊加
+			<div id="${productsId}">
+				<div class="row" style="margin:10px 0px">
+					<div class="col-xs-4">
+						<h4 class="product-name"><strong >${productName}</strong></h4><h4><small>Product description</small></h4>
+					</div>
+					<div class="col-xs-6" style="margin:10px">
+						<div class="col-xs-6 text-right">
+							<h6><strong>${productPrice}</strong></h6>
+						</div>
+						<div class="col-xs-4">
+							<input type="number" class="form-control input-sm" name="amount" value="${productQuantity}">
+						</div>
+						<div class="col-xs-2">
+							<button type="button" class="btn btn-link btn-xs" onclick="removeItem(${productsId})">
+								<span class="glyphicon glyphicon-trash"> </span>
+							</button>
+						</div>
+					</div>
+				</div>
+				<hr>
+			</div>
+			`
+			content += html // 購物車新增一列內容
 		}
 		document.getElementById('body').innerHTML = content
-		document.getElementById('total').innerHTML = productTotal
-		
+		Count()
+		amountChange()
 	}
 
 	// 移除商品
 	function removeItem(Id){
-		document.getElementById(Id).innerHTML='' // 刪除內容的動態效果
-		console.log(Id)
+		let rm = JSON.parse(localStorage.getItem("products-"+ Id)) // localStorage 購物車內容轉換成物件型態
+		Price = rm.Price
+		Quantity = rm.Quantity
+		
+		sum = document.getElementById('total').innerHTML
+		sum = sum - Price * Quantity
+		document.getElementById('total').innerHTML = sum
+
+		document.getElementById(Id).innerHTML = '' // 清除該列內容的動態效果
 		localStorage.removeItem('products-'+ Id)
-		localStorage.setItem('productsId',productsId - 1)
-		console.log("remove test")
-		productsId --
 	}
-	
+
 	// 清除購物車
 	function clearCart(){
 		localStorage.clear()
 		location.href = '/'
+	}
+
+	// 計算總金額
+	function Count(){
+		let sum = 0
+		let price = document.querySelectorAll("h6 > strong")
+		let amount = document.querySelectorAll("input")
+		for(i=0; i<price.length; i++){
+			p = Number(price[i].innerHTML)
+			a = Number(amount[i].value)
+			sum += p * a
+		}
+		document.querySelector("#total").innerHTML = sum;
 	}
 
 	// 登入提醒視窗
@@ -126,3 +142,4 @@
 		location.href = '/'
 	}
 </script>
+</body>
