--- a/final/view/index.html
+++ b/final/view/index.html
@@ -10,19 +10,25 @@
 
 </head>
 <body>
-    <div>
-        <div class="nav">
-            <a href="/">首頁</a>
-            <a href="/cart">購物車</a>
-            <a href="/register">註冊</a>
+    <div class="nav">
+        <ul class="p-nested-dropdowns">
+            <li><a href="/">首頁</a></li>
+            <li><a href="/cart">購物車</a></li>
 
-            <!-- 登入/登出 圖示隨著userID狀態改變 -->
             <% if (userid == undefined){ %>
-            <a href="/login">登入</a>   
+            <li><a href="/register">註冊</a></li>
+            <li><a href="/login">登入</a></li>
             <% } else { %>
-            <a href="/logout">登出</a>
+            <li>
+                <div style="overflow: hidden;"><%= userid %></div>
+                <!-- First level sub dropdown -->
+                <ul>
+                    <li><a href="/member">會員中心</a></li>
+                    <li><a href="/logout">登出</a></li>
+                </ul>
+            </li>
             <% } %>
-        </div>
+        </ul>
     </div>
 
     <div style="display: flex; margin:80px 100px;">
@@ -53,7 +59,7 @@
                             <h5 class="card-title" id="Name-0">Ps4</h5>
                             <p class="card-text" id="Price-0">100</p>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="數量" id="Quantity-0">
+                                <input type="number" class="form-control" id="Quantity-0" min="1" placeholder="數量"  >
                             </div>
                             <a href="#" class="btn btn-primary" onclick="addItemToCart(0)">加入</a>
                         </div>
@@ -64,7 +70,7 @@
                             <h5 class="card-title" id="Name-1">Xbox</h5>
                             <p class="card-text" id="Price-1">200</p>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="數量" id="Quantity-1">
+                                <input type="number" class="form-control" id="Quantity-1" min="1" placeholder="數量">
                             </div>
                             <a href="#" class="btn btn-primary" onclick="addItemToCart(1)">加入</a>
                         </div>
@@ -75,7 +81,7 @@
                             <h5 class="card-title" id="Name-2">Switch</h5>
                             <p class="card-text" id="Price-2">300</p>
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="數量" id="Quantity-2">
+                                <input type="number" class="form-control"  id="Quantity-2" min="1" placeholder="數量">
                         </div>
                         <a href="#" class="btn btn-primary" onclick="addItemToCart(2)">加入</a>
                         </div>
@@ -87,35 +93,33 @@
     </div>
     
 <script>
-    // 新增紀錄商品排序的 productsId
-    var productsId = 0
-
-    if (localStorage.getItem('productsId') != undefined){
-    var productsId = localStorage.getItem('productsId')
-    console.log('id:',productsId)
-    }
-    else{
-    var productsId = 0
-    console.log('count test 0')
-    }
-
+    // 新增紀錄商品排序的 total
+    var total = localStorage.length
 
     // 新增商品到購物車
     function addItemToCart(productId){ 
         var productName = document.getElementById("Name-" + productId).textContent
         var productPrice = document.getElementById("Price-" + productId).textContent
         var productQuantity = document.getElementById("Quantity-" + productId).value
+        
+        // 驗證商品數量的值為正整數
+        var r = /^[0-9]*[1-9][0-9]*$/
 
-        let products = {
-            Id : productsId,
-            Name : productName,
-            Price : productPrice,
-            Quantity : productQuantity
+        if (r.test(productQuantity)){
+
+            let products = {
+                Id : total,
+                Name : productName,
+                Price : productPrice,
+                Quantity : productQuantity
+            }
+            
+            localStorage.setItem('products-' + total , JSON.stringify(products)) // 轉換為 JSON 格式
+            total ++ 
         }
-
-        localStorage.setItem('products-' + productsId, JSON.stringify(products)) // 轉換為 JSON 格式
-        productsId ++ 
-        localStorage.setItem('productsId', productsId)
+        else {
+            alert("請填入有效數量")
+        }
     }
 
 
