--- a/final/public/style.css
+++ b/final/public/style.css
@@ -1,35 +1,35 @@
-a:hover {
-    text-decoration: none;
-}
 /* The root */
-.nav {
-    text-align: center;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    background-color: black;
-    
-}
 .p-nested-dropdowns {
     /* Border */
     border: 1px solid rgba(0, 0, 0, 0.3);
     display: flex;
+    background-color: #333;
 
     /* Reset list styles */
     list-style-type: none;
     margin: 0;
     padding: 0;
+    text-align: center;
+    justify-content: flex-end;
 }
 
 .p-nested-dropdowns li {
     /* Spacing */
     padding: 8px;
+    color: white;
 
     /* Used to position the sub dropdown */
     position: relative;
     width: 100px;
 }
+.p-nested-dropdowns li a{
+    text-decoration: none;
+    color:white;
+}
 
 /* The sub dropdown */
 .p-nested-dropdowns ul {
+    background-color: #333;
     /* Border */
     border: 1px solid rgba(0, 0, 0, 0.3);
 
@@ -37,7 +37,7 @@ a:hover {
     display: none;
 
     /* Absolute position */
-    right: 0;
+    right: -1px;
     position: absolute;
     top: 100%;
     text-align: center;
@@ -46,14 +46,12 @@ a:hover {
     list-style-type: none;
     margin: 0;
     padding: 0;
-
-    /* Width */
-    /* width: 150px; */
+    z-index: 9999;
 }
 
 /* Change background color of list item when being hovered */
 .p-nested-dropdowns li:hover {
-    background-color: rgba(0, 0, 0, 0.1);
+  background-color: #111;
 }
 
 /* Show the direct sub dropdown when hovering the list item */
@@ -62,7 +60,8 @@ a:hover {
 }
 
 .sidebar {
-    border: 1px solid rgba(0, 0, 0, 0);
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    background-color: #333;
     display: flex;
     flex-direction: column;
     list-style-type: none;
@@ -71,7 +70,7 @@ a:hover {
 }
 
 .sidebar li {
-    background-color: black;
+
     padding: 8px;
     position: relative;
     color:white;
@@ -79,7 +78,5 @@ a:hover {
 
 .sidebar li:hover {
     background-color: black;
-    cursor:pointer;
-    transform : scale(0.9);
 }
 
