--- a/final-02/view/index.html
+++ b/final-02/view/index.html
@@ -33,7 +33,7 @@
 
             <div class="col-lg-3">
 
-                <h1 class="my-4">Store</h1>
+                <h1 class="my-4"></h1>
                 <div class="list-group">
                     <a href="#" class="list-group-item">Category 1</a>
                     <a href="#" class="list-group-item">Category 2</a>
