--- a/final-02/view/product.html
+++ b/final-02/view/product.html
@@ -63,13 +63,13 @@
                         Product Reviews
                     </div>
                     <div class="card-body">
-                        <p>This item is shit.</p>
+                        <p>test</p>
                         <small class="text-muted">Posted by Anonymous on 3/1/17</small>
                         <hr>
-                        <p>RIP</p>
+                        <p>test</p>
                         <small class="text-muted">Posted by Anonymous on 3/1/17</small>
                         <hr>
-                        <p>How dare you</p>
+                        <p>Nice product</p>
                         <small class="text-muted">Posted by Anonymous on 3/1/17</small>
                         <hr>
                         <a href="#" class="btn btn-success">Leave a Review</a>
