--- a/final-02/view/header.html
+++ b/final-02/view/header.html
@@ -64,7 +64,8 @@
 
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                         <a class="dropdown-item"><%= userid %></a>
-                        <a class="dropdown-item" href="#">會員資料</a>
+                        <a class="dropdown-item" href="/userDetails">會員資料</a>
+                        <a class="dropdown-item" href="/order">購買清單</a>
                         <a class="dropdown-item" href="/logout">登出</a>
                     </div>
                 </div>
