--- a/final-02/view/cart.html
+++ b/final-02/view/cart.html
@@ -1,17 +1,24 @@
 <html>
 
 <head>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
-		integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-	<link rel="stylesheet" href="css/cart.css">
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
-		integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-		crossorigin="anonymous"></script>
-
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+	<meta name="author" content="">
+	
 	<title>Cart</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom styles for this template -->
+    <link href="css/cart.css" rel="stylesheet">
+
+    <!-- Bootstrap core JavaScript -->
+    <script src="vendor/jquery/jquery.min.js"></script>
+    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+	
 
 </head>
 
@@ -22,27 +29,26 @@
 <body onload="loadCart()" 
 <% } %>
 
-	<input type="hidden" value="<%= c_data %>" id="data">
+    <!-- Navigation -->
+    <%- include('header.html') -%>
 
-	<div class="container" style="margin-top: 30px;">
-		<table class="table" style=" text-align: center;">
+	<div class="container" style="margin-top: 80px;">
+		<table class="table" >
 			<thead class="thead-light">
 				<tr>
-					<th scope="col" style="width: 5%;">#</th>
-					<th scope="col" style="width: 20%;">Name</th>
-					<th scope="col" style="width: 25%;">Price</th>
-					<th scope="col" style="width: 25%;">Amount</th>
-					<th scope="col" style="width: 25%;"></th>
+					<th scope="col" >Name</th>
+					<th scope="col" >Price</th>
+					<th scope="col" >Amount</th>
+					<th scope="col" ></th>
 				</tr>
 			</thead>
 
 			<tbody id='body'>
 				<% for(var i=0; i < c_data.length; i++){ %>
 					<tr id="<%= c_data[i].name %>">
-						<th scope="row"><%= i %></th>
-						<td><%= c_data[i].name %></td>
+						<th scope="row"><%= c_data[i].name %></th>
 						<td><h6><strong><%= c_data[i].price %></strong></h6></td>
-						<td><input type="number" class="<%= c_data[i].name %>" value="<%= c_data[i].amount %>"></td>
+						<td><input type="number" id="amount" class="<%= c_data[i].name %>" value="<%= c_data[i].amount %>"></td>
 						<td>
 							<a href="#"><input type="button" class="<%= c_data[i].name %>" value="刪除"></a>
 						</td>
@@ -54,8 +60,7 @@
 			<tfoot>
 				<tr>
 					<th scope="row"></th>
-					<td></td>
-					<td><h5 class="text-right" style="font-size:1rem;">總金額 :<a></td>
+					<td><h5 class="text-right" style="font-size:1rem;">Total:<a></td>
 					<td>
 						<strong id='total'>0</strong>
 					</td>
