--- a/final-02/view/css/cart.css
+++ b/final-02/view/css/cart.css
@@ -1,30 +1,14 @@
-@media (min-width: 576px) {
-  .container {
-    max-width: 540px;
+@media (max-width: 576px) {
+  .body {
+    max-width: 100%;
+  }
+  #amount {
+    max-width: 60px;
   }
 }
 
-@media (min-width: 768px) {
-  .container {
-    max-width: 720px;
-  }
-}
 
-@media (min-width: 992px) {
-  .container {
-    max-width: 960px;
-  }
-}
 
-@media (min-width: 1200px) {
-  .container {
-    max-width: 1140px;
-  }
-}
-
-.input-am {
-  width: 50%;
-}
 
 
   
